se hizo el buscador y el login

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <h8>VIAJA CON MBlog</h8>
               </div>
               <div class="col py-2">
-                <button type="button" class="btn btn-secondary mb-1">Log in</button>
-                <button type="button" class="btn btn-secondary">Subscribete</button>
+                <a type="button" class="btn btn-secondary mb-1" href="src/login.html">Log in</button>
+                <a type="button" class="btn btn-secondary">Subscribete</button>
               </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                   <li><a class="dropdown-item" href="src/asia.html">Asia</a></li>
                   <li><a class="dropdown-item" href="src/europa.html">Europa</a></li>
                   <li><a class="dropdown-item" href="src/osceania.html">Osceania</a></li>
-                  
+
                   <li><hr class="dropdown-divider"/></li>
                   <li>
                     <a class="dropdown-item" href="#">Antartida</a>
