--- a/src/africa.html
+++ b/src/africa.html
@@ -223,9 +223,6 @@
         ÁFRICA
       </h1>
       <div class="container bg-light p-5">
-
-
-
         <ol>
           <h3>
             <li>Zanzíbar</li>
@@ -238,20 +235,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Zanzíbar es un archipiélago de Tanzania frente a la costa de África
+            Oriental. En su isla principal, Unguja, familiarmente llamada
+            Zanzíbar, se encuentra la Ciudad de piedra, un centro comercial
+            histórico con influencia suajili e islámica. Sus carreteras
+            serpenteantes muestran minaretes, portales tallados y monumentos del
+            siglo XIX, como la Casa de las Maravillas, un antiguo palacio del
+            sultán. Las villas del norte Nungwi y Kendwa tienen amplias playas
+            bordeadas de hoteles.
           </p>
 
           <h3>
@@ -260,25 +251,18 @@
           </h3>
           <img
             class="img-fluid"
-            src="../img/africa/Zanzíbar.jpg"
+            src="../img/africa/Seychelles.jpg"
             width="500px"
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            LSeychelles es un archipiélago de 115 islas en el océano Índico,
+            frente a África Oriental. Alberga varias playas, arrecifes de coral
+            y reservas naturales, además de animales exóticos, como las tortugas
+            gigantes de Aldabra. En Mahé, un centro que permite visitar otras
+            islas, se encuentra la capital, Victoria. También tiene los bosques
+            tropicales de montaña del Parque Nacional de Morne Seychellois y
+            playas, incluidas Beau Vallon y Anse Takamaka.
           </p>
 
           <h3>
@@ -292,20 +276,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Marrakech es una antigua ciudad imperial en el oeste de Marruecos y
+            un importante centro económico con mezquitas, palacios y jardines.
+            La medina es una ciudad medieval amurallada y densamente poblada que
+            data del período del Imperio Bereber, con pasajes que parecen
+            laberintos y animados zocos (mercados) que venden cerámicas, joyas y
+            tejidos tradicionales. El minarete morisco de la mezquita Kutubía
+            del siglo XII es un símbolo de la ciudad visible desde millas de
+            distancia.
           </p>
 
           <h3>
@@ -319,20 +297,28 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            El Kilimanjaro es una montaña situada en el noreste de Tanzania,
+            formada por tres volcanes inactivos: el Shira, en el oeste, de 3962
+            m de altitud; el Mawenzi, en el este, de 5149 m y el Kibo, entre
+            ambos, el más reciente desde el punto de vista geológico y cuyo
+            pico, el Uhuru, se eleva hasta los más 5891,8 m. Es la montaña más
+            alta de África, la montaña independiente más alta del mundo —a unos
+            4900 m de altura desde su base en la meseta— y el cuarto pico
+            ultraprominente en la Tierra. Es conocido además por los famosos
+            campos de hielo de su cumbre, que se están reduciendo de forma
+            drástica desde principios del siglo xx y se estima que desaparecerán
+            por completo entre 2020 y 2050. La disminución de las
+            precipitaciones de nieve responsable de este retroceso se atribuye a
+            menudo al calentamiento global, además de a un importante proceso de
+            deforestación. A pesar de la creación del parque nacional del
+            Kilimanjaro en 1973, aunque este parque juega un papel esencial en
+            la regulación bioclimática del ciclo hidrológico, el cinturón
+            forestal continúa estrechándose, debido a que la montaña es el hogar
+            de los pastores masái en el norte y en el oeste, que necesitan
+            prados de altitud para pacer sus rebaños, y campesinos chagga al sur
+            y al este, que cultivan parcelas cada vez más extensas en el
+            piedemonte, a pesar de un proceso de concienciación iniciado a
+            principios del siglo xxi.
           </p>
         </ol>
       </div>
