--- a/src/asia.html
+++ b/src/asia.html
@@ -231,20 +231,13 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Bali es una isla de Indonesia conocida por sus frondosas montañas
+            volcánicas, los icónicos arrozales, las playas y los arrecifes de
+            coral. La isla alberga sitios religiosos, como el templo Uluwatu en
+            un acantilado. Al sur, la ciudad costera de Kuta tiene bares
+            encendidos, mientras que Seminyak, Sanur y Nusa Dua son ciudades
+            turísticas populares. La isla también es famosa por sus lugares de
+            retiro para el yoga y la meditación.
           </p>
 
           <h3>
@@ -258,20 +251,12 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Hội An es una ciudad costera de Vietnam conocida por su conservado
+            centro antiguo y sus canales. La historia de la ciudad portuaria
+            como crisol de culturas se ve reflejada en su arquitectura, que es
+            una mezcla de eras y estilos. Estos incluyen tiendas y templos
+            chinos de madera, coloridos edificios franceses, ornamentadas casas
+            tubo vietnamitas y el icónico puente cubierto japonés con su pagoda.
           </p>
 
           <h3>
@@ -285,20 +270,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            La Ciudad de Phuket, en la Isla de Phuket, es la capital de la
+            Provincia de Phuket de Tailandia. En la Ciudad Antigua, la calle
+            Thalang Road está bordeada de almacenes coloridos del siglo XIX y
+            edificios sino-portugueses. La mansión Baan Chinpracha, construida
+            en 1903 por un acaudalado mercader de hojalatas, tiene baldosas
+            italianas, ventanas con postigos y muebles antiguos. En una mansión
+            de la década de 1930, se encuentra el Museo Thai Hua, con
+            exhibiciones sobre la cultura y la historia de Phuket.
           </p>
 
           <h3>
@@ -312,20 +291,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Katmandú, la capital de Nepal, se ubica en un valle rodeado por las
+            montañas del Himalaya. En el centro de las calles de la ciudad
+            laberíntica, se encuentra la plaza de Durbar, que se llena de gente
+            durante el Indra Jatra, un festival religioso que incluye danzas con
+            máscaras. En el año 2015, un terremoto dañó o destruyó varios de los
+            sitios históricos de la ciudad. El palacio de la plaza Durbar,
+            Hanuman Dhoka, y Kasthamandap, un templo hindú de madera, se están
+            reconstruyendo.
           </p>
 
           <h3>
@@ -339,20 +312,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Bangkok, la capital de Tailandia, es una extensa ciudad conocida por
+            los santuarios ornamentados y la animada vida callejera. El río Chao
+            Phraya, lleno de botes, alimenta su red de canales y pasa por el
+            distrito real de Rattanakosin, donde se encuentra el Gran Palacio y
+            su templo sagrado Wat Phra Kaew. Cerca de allí, se ubica el templo
+            Wat Pho, con un enorme Buda inclinado y, en la orilla opuesta, el
+            templo Wat Arun, con sus empinados escalones y su chapitel de estilo
+            Khmer.
           </p>
 
           <h3>
@@ -366,20 +333,14 @@
             alt="Zanzíbar"
           /><br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            corporis rem dolorem repellendus esse minima nemo porro? Sed ducimus
-            asperiores impedit perferendis modi dolor necessitatibus aliquid?
-            Odit reprehenderit minus aliquid! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Earum iure exercitationem possimus
-            dolor ad atque explicabo ab, ut, aspernatur architecto excepturi et
-            fuga, eos repellat nam dolorem impedit velit laboriosam? Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Itaque aut quibusdam
-            sit quia adipisci? Adipisci, quibusdam fugiat repellendus
-            voluptatum, cupiditate qui, dolorum animi dignissimos quas suscipit
-            deleniti quos id nam. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Harum, minus. Modi, dolorum perferendis quibusdam
-            incidunt, accusantium maxime ad id distinctio cum, provident ratione
-            corporis repudiandae harum totam dicta soluta ab.
+            Tokio, la ajetreada capital de Japón, mezcla lo ultramoderno y lo
+            tradicional, desde los rascacielos iluminados con neones hasta los
+            templos históricos. El opulento santuario Shinto Meiji es conocido
+            por su puerta altísima y los bosques circundantes. El Palacio
+            Imperial se ubica en medio de grandes jardines públicos. Los
+            distintos museos de la ciudad ofrecen exhibiciones que van desde el
+            arte clásico (en el Museo Nacional de Tokio) hasta un teatro kabuki
+            reconstruido (en el Museo Edo-Tokyo).
           </p>
         </ol>
       </div>
