--- a/src/europa.html
+++ b/src/europa.html
@@ -189,7 +189,18 @@
           id="buscador1"
           placeholder="Buscar..."
         />
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="category_list">
+          <a href="#" class="btn btn-button " id="categoryItem" category="Italia">Ordenadores</a>
+          <a href="#" class="btn btn-button" id="categoryItem" category="all">Todo</a>
+          <a href="#" class="btn btn-button" id="categoryItem" category="España">Laptops</a>
+          <a href="#" class="btn btn-button" id="categoryItem" category="smartphones">Smartphones</a>
+          <a href="#" class="btn btn-button" id="categoryItem" category="monitores">Monitores</a>
+          <a href="#" class="btn btn-button" id="categoryItem" category="audifonos">Audifonos</a>
+        </div>
+        <section class="products-list">
+
+        
+        <div class="country card ms-2 my-1 bg-white product-item" category="Italia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -216,7 +227,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="España" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -243,7 +254,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Rino Unido" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -270,7 +281,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Francia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -297,7 +308,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Turquia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -324,7 +335,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Irlanda" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -351,7 +362,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="España" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -378,7 +389,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Francia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -405,7 +416,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="card country ms-2 my-1 bg-white product-item" category="Italia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -414,7 +425,7 @@
                 alt="..."
               />
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8" >
               <div class="card-body">
                 <h5 class="card-title">Basílica de San Pedro</h5>
                 <p id="pais" class="card-text">Italia</p>
@@ -432,7 +443,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class=" country card ms-2 my-1 bg-white product-item" category="Italia" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -459,7 +470,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="Alemania" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -486,7 +497,7 @@
           </div>
         </div>
 
-        <div class="card ms-2 my-1 bg-white" style="max-width: 650px">
+        <div class="country card ms-2 my-1 bg-white product-item" category="all" style="max-width: 650px">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -514,6 +525,7 @@
             </div>
           </div>
         </div>
+      </section>
       </section>
       <!--ASIDE-->
       <aside style="width: 350px">
