--- a/src/osceania.html
+++ b/src/osceania.html
@@ -208,24 +208,17 @@
               class="img-fluid"
               src="../img/osceania/Fiyi.jpg"
               max-width="300px"
-              alt="Zanzíbar"
+              alt="Fiyi"
             /><br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis corporis rem dolorem repellendus esse minima nemo
-              porro? Sed ducimus asperiores impedit perferendis modi dolor
-              necessitatibus aliquid? Odit reprehenderit minus aliquid! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Earum iure
-              exercitationem possimus dolor ad atque explicabo ab, ut,
-              aspernatur architecto excepturi et fuga, eos repellat nam dolorem
-              impedit velit laboriosam? Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque aut quibusdam sit quia adipisci?
-              Adipisci, quibusdam fugiat repellendus voluptatum, cupiditate qui,
-              dolorum animi dignissimos quas suscipit deleniti quos id nam.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-              minus. Modi, dolorum perferendis quibusdam incidunt, accusantium
-              maxime ad id distinctio cum, provident ratione corporis
-              repudiandae harum totam dicta soluta ab.
+              Fiyi, un país del Pacífico Sur, es un archipiélago de más de 300
+              islas. Es famoso por sus paisajes escabrosos, las playas bordeadas
+              de palmeras y los arrecifes de coral con lagunas de aguas
+              cristalinas. Sus islas más importantes, Viti Levu y Vanua Levu,
+              albergan la mayor parte de la población. En Viti Levu, se
+              encuentra la capital, Suva, una ciudad puerto con arquitectura
+              colonial británica. El Museo de Fiyi, en los Jardines Thurston de
+              la época victoriana, tiene exhibiciones etnográficas.
             </p>
 
             <h3><li>Monte Uluru</li></h3>
@@ -233,24 +226,17 @@
             <img
               src="../img/osceania/Uluru.jpg"
               width="500px"
-              alt="Zanzíbar"
+              alt="Monte Urulu"
             /><br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis corporis rem dolorem repellendus esse minima nemo
-              porro? Sed ducimus asperiores impedit perferendis modi dolor
-              necessitatibus aliquid? Odit reprehenderit minus aliquid! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Earum iure
-              exercitationem possimus dolor ad atque explicabo ab, ut,
-              aspernatur architecto excepturi et fuga, eos repellat nam dolorem
-              impedit velit laboriosam? Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque aut quibusdam sit quia adipisci?
-              Adipisci, quibusdam fugiat repellendus voluptatum, cupiditate qui,
-              dolorum animi dignissimos quas suscipit deleniti quos id nam.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-              minus. Modi, dolorum perferendis quibusdam incidunt, accusantium
-              maxime ad id distinctio cum, provident ratione corporis
-              repudiandae harum totam dicta soluta ab.
+              Uluru, o Ayers Rock, es un enorme monolito de arenisca en el
+              corazón del árido “Centro Rojo” del Territorio del Norte. El
+              pueblo grande más cercano es Alice Springs, a 450 km. El Uluru es
+              sagrado para la población indígena australiana, y se piensa que
+              comenzó a formarse hace 550 millones de años. Se ubica dentro del
+              Parque nacional Uluru-Kata Tjuta, que también incluye los 36 domos
+              de piedra roja de la formación Kata Tjuta (coloquialmente llamada
+              “las Olgas”).
             </p>
 
             <h3><li>La Gran Barrera de Coral</li></h3>
@@ -258,24 +244,17 @@
             <img
               src="../img/osceania/barreracoral.jpg"
               width="500px"
-              alt="Zanzíbar"
+              alt="La Gran Barrera de Coral"
             /><br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis corporis rem dolorem repellendus esse minima nemo
-              porro? Sed ducimus asperiores impedit perferendis modi dolor
-              necessitatibus aliquid? Odit reprehenderit minus aliquid! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Earum iure
-              exercitationem possimus dolor ad atque explicabo ab, ut,
-              aspernatur architecto excepturi et fuga, eos repellat nam dolorem
-              impedit velit laboriosam? Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque aut quibusdam sit quia adipisci?
-              Adipisci, quibusdam fugiat repellendus voluptatum, cupiditate qui,
-              dolorum animi dignissimos quas suscipit deleniti quos id nam.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-              minus. Modi, dolorum perferendis quibusdam incidunt, accusantium
-              maxime ad id distinctio cum, provident ratione corporis
-              repudiandae harum totam dicta soluta ab.
+              La Gran Barrera de Coral, frente a la costa de Queensland en el
+              noreste de Australia, es la especie viviente más grande de la
+              Tierra, que es visible incluso desde el espacio exterior. El
+              ecosistema de 2,300 km de largo comprende miles de arrecifes y
+              cientos de islas compuestas por más de 600 tipos de corales duros
+              y blandos. Es hogar de innumerables especies de peces coloridos,
+              moluscos y estrellas de mar, junto con tortugas, delfines y
+              tiburones.
             </p>
 
             <h3><li>Egmont National Park</li></h3>
@@ -283,24 +262,17 @@
             <img
               src="../img/osceania/Egmont National Park.jpg"
               width="500px"
-              alt="Zanzíbar"
+              alt="Egmont National Park"
             /><br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis corporis rem dolorem repellendus esse minima nemo
-              porro? Sed ducimus asperiores impedit perferendis modi dolor
-              necessitatibus aliquid? Odit reprehenderit minus aliquid! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Earum iure
-              exercitationem possimus dolor ad atque explicabo ab, ut,
-              aspernatur architecto excepturi et fuga, eos repellat nam dolorem
-              impedit velit laboriosam? Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque aut quibusdam sit quia adipisci?
-              Adipisci, quibusdam fugiat repellendus voluptatum, cupiditate qui,
-              dolorum animi dignissimos quas suscipit deleniti quos id nam.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-              minus. Modi, dolorum perferendis quibusdam incidunt, accusantium
-              maxime ad id distinctio cum, provident ratione corporis
-              repudiandae harum totam dicta soluta ab.
+              El Parque Nacional Egmont está situado al Sur de Nueva Plymouth,
+              cerca de la costa oeste de la Isla Norte de Nueva Zelanda. Tiene
+              este nombre por la montaña que domina sus alrededores, que a su
+              vez fue nombrada por el Capitán Cook en honor a John Perceval,
+              Conde de Egmont, el Primer Lord del Almirantazgo que organizó el
+              primer viaje de Cook. El nombre maorí de esta montaña ha sido
+              Taranaki durante muchos siglos, y actualmente se la conoce de
+              manera oficial como "Monte Taranaki o Monte Egmont".
             </p>
 
             <h3><li>Hobbiton Nueva Zelanda</li></h3>
@@ -308,24 +280,16 @@
             <img
               src="../img/osceania/hobbiton.jpg"
               width="500px"
-              alt="Zanzíbar"
+              alt="Hobbiton Nueva Zelanda"
             /><br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis corporis rem dolorem repellendus esse minima nemo
-              porro? Sed ducimus asperiores impedit perferendis modi dolor
-              necessitatibus aliquid? Odit reprehenderit minus aliquid! Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Earum iure
-              exercitationem possimus dolor ad atque explicabo ab, ut,
-              aspernatur architecto excepturi et fuga, eos repellat nam dolorem
-              impedit velit laboriosam? Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque aut quibusdam sit quia adipisci?
-              Adipisci, quibusdam fugiat repellendus voluptatum, cupiditate qui,
-              dolorum animi dignissimos quas suscipit deleniti quos id nam.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-              minus. Modi, dolorum perferendis quibusdam incidunt, accusantium
-              maxime ad id distinctio cum, provident ratione corporis
-              repudiandae harum totam dicta soluta ab.
+              El Hobbiton Movie Set es un lugar importante utilizado para la
+              trilogía cinematográfica El Señor de los Anillos y la trilogía
+              cinematográfica El Hobbit . Está situado en una granja familiar a
+              unos 8 kilómetros (5,0 millas) al oeste de Hinuera y 10 kilómetros
+              (6,2 millas) al suroeste de Matamata , en Waikato , Nueva Zelanda
+              , y ahora es un destino turístico de Tolkien , que ofrece una
+              visita guiada por el set.
             </p>
           </ol>
         </div>
