--- a/src/america.html
+++ b/src/america.html
@@ -142,11 +142,9 @@
               alt="Card image"
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">AMÉRICA DEL NORTE</h5>
+              <h5 class="card-title">Título</h5>
               <p class="card-text">
-                Older women are more likely to carry fetuses with genetic
-                disorders that often can’t be detected until 15 weeks of
-                pregnancy, beyond the limit set in a Senate proposal.
+                Hollywood.
               </p>
               <p class="card-text">Last updated 3 mins ago</p>
             </div>
@@ -158,7 +156,8 @@
               alt="Card image"
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">AMÉRICA CENTRAL</h5>
+              <h5 class="card-title">Título</h5>
+              <p></p>
               <p class="card-text">Last updated 3 mins ago</p>
             </div>
           </div>
@@ -169,7 +168,7 @@
               alt="Card image"
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">AMÉRICA DEL SUR</h5>
+              <h5 class="card-title">Título</h5>
               <p class="card-text">Last updated 3 mins ago</p>
             </div>
           </div>
@@ -184,12 +183,10 @@
               />
               <div class="card-img-overlay">
                 <h5 class="card-title">
-                  An Abortion Ban With Unexpected Consequences for Older Mothers
+                  Título
                 </h5>
                 <p class="card-text">
-                  Older women are more likely to carry fetuses with genetic
-                  disorders that often can’t be detected until 15 weeks of
-                  pregnancy, beyond the limit set in a Senate proposal.
+                  Párrafo
                 </p>
                 <p class="card-text">Last updated 3 mins ago</p>
               </div>
@@ -202,9 +199,9 @@
               />
               <div class="card-img-overlay">
                 <h5 class="card-title">
-                  How long should I wait to get a bivalent booster if I recently
-                  had a shot or contracted Covid?
+                  Título
                 </h5>
+                <p>Párrafo</p>
                 <p class="card-text">Last updated 3 mins ago</p>
               </div>
             </div>
@@ -216,9 +213,9 @@
               />
               <div class="card-img-overlay">
                 <h5 class="card-title">
-                  How long should I wait to get a bivalent booster if I recently
-                  had a shot or contracted Covid?
+                  Título
                 </h5>
+                <p>Párrafo</p>
                 <p class="card-text">Last updated 3 mins ago</p>
               </div>
             </div>
